Fixed chat alignment
Chat is now aligned along the bottom of the window and does not extend beyond it when maximized.

--- a/Seven-Nation-Army3/src/styles/Chat.scss
+++ b/Seven-Nation-Army3/src/styles/Chat.scss
@@ -9,8 +9,9 @@
 }
 .chat {
   width: 350px;
-  height: 430px;
+  height: 460px;
   float: left;
+  bottom: 0px;
   background: #f2f5f8;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
